--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Austeja's birthday 🎉</h1>
+            <h1>Today is Freddie Highmore's birthday 🎉</h1>
             <img id="bff-img" src="images/freddie-highmore.jpg">
             <h2 id="bday-age">31 years old</h2>
             <h4 id="bday-date">14.02.1992</h4>
